# gamebot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dump_words.py  fix-compile-commands.py  full-test.sh  grab-deps.sh  mac-build-test.sh  mac-build.sh  refs.txt  styles.css  test_in_python.py  todo.md  ubuntu-build.sh
docs/: index.html
include/: auth.hpp  bin_tools.hpp  bot.hpp  config.hpp  constants.hpp  debug.hpp  endpoints.hpp  errorcodes.hpp  fileio.hpp  flags.hpp  json_utils.hpp  messages.hpp  parse.hpp  queue.hpp  sentiment.hpp  strings.hpp  utils.hpp  web.hpp  wswrapper.hpp
scripts/: build.sh  dump_words.py  full-test.sh  grab-deps.sh  mac-build.sh  test_in_python.py  ubuntu-build.sh
src/: CMakeLists.txt  auth.cpp  bot.cpp  bot.hpp  debug.cpp  fileio.cpp  json_utils.hpp  loop.hpp  main.cpp  messages.cpp  messages.hpp  parse.cpp  queue.hpp  sentiment.cpp  utils.cpp  web.cpp  wswrapper.cpp
src/api/: CMakeLists.txt  api.hpp  channel.hpp  emoji.hpp  interaction.hpp  message.hpp  reaction.hpp  user.hpp
src/components/: CMakeLists.txt  action.hpp  button.hpp  component.cpp  component.hpp  config.hpp  messages.cpp  messages.hpp  queue.cpp  queue.hpp  sentiment.cpp  sentiment.hpp
src/components/games/: CMakeLists.txt  gamequeue.cpp  gamequeue.hpp  hangman.cpp  hangman.hpp
src/components/tools/: CMakeLists.txt  normal_commands.cpp  normal_commands.hpp  reminder.cpp  reminder.hpp  sprint.cpp  sprint.hpp  todo.cpp  todo.hpp
src/utils/: CMakeLists.txt  async_stdin.hpp  debug.hpp  fileio.cpp  fileio.hpp  json_utils.hpp  parse.cpp  parse.hpp  timer.hpp  utils.cpp  utils.hpp
src/web/: CMakeLists.txt  strings.hpp  web.cpp  web.hpp  wswrapper.cpp  wswrapper.hpp
test/: .gitignore  CMakeLists.txt  Test_Component.cpp  Test_FileIO.cpp  Test_Parse.cpp  Test_Utils.cpp  has_filesystem.cpp
